# lqr_control_robot_apollo

./: .clmcplot  .clmcplot_current_point  .gitignore  CMakeLists.txt  COPYRIGHT.txt  README.md  com_msg  package.xml  semaphores.sh
cmake/: sl_task_plugin.cmake
config/: ConfigFiles.cf  ConfigFilesSim.cf  Contacts.cf  ExtraSensorCalibration.cf  Gains.cf  GainsSim.cf  LinkParameters.cf  LinkParameters.cf.old  LinkParametersSim.cf  Objects.cf  ParameterPool.cf  SensorCalibration.cf  SensorFilter.cf  SensorOffset.cf  ServoParametersSim.cf  Translation.cf  WhichDOFs.cf  task_parameters.yaml
deprecated/: feedback_control.hpp  opts.hpp  parameters_initialization.cpp  parameters_initialization.hpp  pole_balancing.cpp  pole_balancing.hpp  pole_balancing_task_old.cpp  pole_balancing_task_old.h  snatch_pole.cpp  snatch_pole.hpp  test_estimate_states.cpp  test_measure_and_estimate.cpp  test_measurements.cpp  test_parameters_initialization.cpp  test_snatch_pole.cpp
deprecated/include/lqr_gains/: gather_LQR_gains_to_publish.hpp  read_LQR_gains_from_file.hpp  subscribe_to_gains.hpp
deprecated/launch/: automatic_LQR_tuning_dep.launch
deprecated/matlab/: compute_rms.m  compute_task_time.m  load_clmc_data.m
deprecated/nodes/: publisher_LQRgains.cpp
deprecated/nodes/config_nodes/: LQR_gains_safe_backup.cf  LQR_gains_search.cf  config_publisher_LQRgains.yaml
deprecated/src/lqr_gains/: gather_LQR_gains_to_publish.cpp  read_LQR_gains_from_file.cpp  subscribe_to_gains.cpp
include/lqr_gains/: ComputeLQRcost.hpp  GainsCollector.hpp
include/pole_angle_measurement/: subscriber_pole_angle.hpp
include/pole_balancing_apollo/: StateMachineLearning.hpp  apollo_interface.hpp  estimate_states.hpp  feedback_control.hpp  interfaceES.hpp  measurements.hpp  parameters.hpp  pole_physical_parameters.h
include/tools/: PrintMath.hpp  PrintThis.hpp  butter_filt.hpp  fake_sensor.hpp  tools.hpp
launch/: automatic_LQR_tuning.launch  pole_angle_vicon.launch
launch/tests/: test_pole_angle.launch  test_snatch_pole_vicon.launch
nodes/: publisher_fake_pole_angle.cpp  publisher_pole_angle_vicon.cpp  publisher_pole_rviz_display.cpp
prefs/: default.sine  default_script  evaluate_invdyn_right.sine  finger_default.osc  kuka_test.sine  motor_default.osc  motor_default.script  one_dof.sine  param_est_left.sine  param_est_right.sine  sim_default.script  task_default.osc  task_default.script  task_default2.osc
src/: automatic_learning_task.cpp  pole_balancing_task.cpp
src/lqr_gains/: ComputeLQRcost.cpp  GainsCollector.cpp
src/pole_angle_measurement/: subscriber_pole_angle.cpp
src/pole_balancing_apollo/: StateMachineLearning.cpp  apollo_interface.cpp  estimate_states.cpp  feedback_control.cpp  measurements.cpp  parameters.cpp
src/tools/: PrintMath.cpp  PrintThis.cpp  butter_filt.cpp  fake_sensor.cpp  tools.cpp
tests/: apollo_interface_debug_task.cpp  feedback_control_tests.cpp  main_test.cpp  test_SLloop.cpp  test_fake_sensor.cpp  test_feedback_control.cpp  test_gain_reader.cpp  test_parameters.cpp  test_pole_angle_broadcast.cpp  test_record_SL_data.cpp  test_rt_print_math.cpp  test_rt_print_this.cpp  test_rt_publisher.cpp  test_subscriber_LQR_gains.cpp
tests/include/: read_write_interface.hpp
tests/src/: read_write_interface.cpp
tests/tmp/: readme.txt  test_yaml_config.yaml
